HTML code cleanup

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -203,8 +203,9 @@ th {
   li {
     h1 {
       font-size: 18px;
-      font-weight: 600;
-      margin-bottom: 18px;
+      font-weight: 700;
+      margin-bottom: 15px;
+      letter-spacing: 2px;
     }
     a {
       color: $primary-font-color;
