--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -5,7 +5,6 @@
       <div class="col-lg-8">
         <div class="container">
           <div class="panel-container">
-
             <div class="panel panel-default">
               <div class="panel-body alignleft">
                 <button ng-click="addOrder()" class="btn-dashboard-green">Add Invoice</button>
@@ -14,10 +13,8 @@
                 <input type="text" name="search" placeholder="Search for an item" class="search">
               </div>
             </div>
-
             <div class="panel panel-body">
-              <!--
-              <div class="panel-scroll">-->
+              <!--<div class="panel-scroll">-->
               <div class="table-responsive">
                 <table class="table tableWhite">
                   <thead>
@@ -40,11 +37,6 @@
                       <td>
                         <input type="radio" ng-model="$parent.selectedOrder" ng-value="$parent.orders[$index]">
                       </td>
-                      <!-- <td>
-                                                <div class="alignright">
-                                                    <button ng-click="viewOrderDetail(order)" class="btn-dashboard">View Details</button>
-                                                </div>
-                                            </td> -->
                     </tr>
                   </tbody>
                 </table>
@@ -59,64 +51,60 @@
 </div>
 
 
-
+<!-- VIEW ORDER DETAIL MODAL-->
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
   </div>
   <div class="col-lg-12">
-  <div class="modal-body">
-    <h4><b>Name:</b> {{order.firstName}} {{order.lastName}}</h4>
-    <h4><b>Phone:</b> {{order.phone}}</h4>
-    <h4><b>Order Time:</b> {{order.date | date:'short' }}</h4>
-  </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Item Summary</h3>
+    <div class="modal-body">
+      <h4><b>Name:</b> {{order.firstName}} {{order.lastName}}</h4>
+      <h4><b>Phone:</b> {{order.phone}}</h4>
+      <h4><b>Order Time:</b> {{order.date | date:'short' }}</h4>
     </div>
-
-    <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table tableWhite">
-          <thead>
-            <tr>
-              <th>Product</th>
-              <th>Unit Price</th>
-              <th>Quantity</th>
-              <th>Total Cost</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="item in order.items track by $index">
-              <td>{{item.product.name}}</td>
-              <td>${{item.product.unitPrice}} / {{item.product.unit}}</td>
-              <td>{{item.quantity}} {{item.product.unit}}</td>
-              <td>{{item.product.unitPrice * item.quantity}}</td>
-            </tr>
-          <tr>
-            <td><b>Total</b></td>
-            <td></td>
-            <td></td>
-            <td>${{OrderData.length}}</td>
-          </tr>
-          </tbody>
-        </table>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Item Summary</h3>
+      </div>
+      <div class="panel-body">
+        <div class="table-responsive">
+          <table class="table tableWhite">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Unit Price</th>
+                <th>Quantity</th>
+                <th>Total Cost</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="item in order.items track by $index">
+                <td>{{item.product.name}}</td>
+                <td>${{item.product.unitPrice}} / {{item.product.unit}}</td>
+                <td>{{item.quantity}} {{item.product.unit}}</td>
+                <td>{{item.product.unitPrice * item.quantity}}</td>
+              </tr>
+              <tr>
+                <td><b>Total</b></td>
+                <td></td>
+                <td></td>
+                <td>${{OrderData.length}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-    </div>
   </div>
   </div>
-
   <div class="modal-footer">
     <button class="btn-dashboard-green" type="button" ng-click="dismiss()">OK</button>
   </div>
 </script>
 
 
-<!-- TODO: Manual Add Invoice Form -->
+<!-- MANUAL ORDER INPUT MODAL-->
 <script type="text/ng-template" id="addOrderModal.html">
-
   <div class="modal-header">
     <h3 class="modal-title text-center">Add an Order</h3>
   </div>
@@ -135,7 +123,6 @@
             <small class="text-muted">Please enter a valid email</small>
           </div>
         </fieldset>
-
         <fieldset class="form-group">
           <div class="col-lg-4">
             <label>Invoice Number</label>
@@ -159,9 +146,6 @@
             <small class="text-muted">Maximum 16 characters</small>
           </div>
         </fieldset>
-
-
-
         <fieldset class="form-group">
           <div class="col-lg-4">
             <label>Date</label>
@@ -179,7 +163,6 @@
             <small class="text-muted">Maximum 10 characters. No spaces or dashes.</small>
           </div>
         </fieldset>
-
         <div class="modal-body">
           <div class="panel panel-default">
             <div class="panel-body">
@@ -196,7 +179,6 @@
                     </tr>
                   </thead>
                   <tbody>
-
                     <tr ng-repeat="item in items track by $index">
                       <td>{{item.product.name}}</td>
                       <td>{{item.block.displayData || item.block.catchDate}}</td>
@@ -204,21 +186,16 @@
                       <td>{{item.units}}</td>
                       <td>{{item.quantity}}</td>
                     </tr>
-
-
                     <tr>
                       <td>
                         <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
                       </td>
-
                       <td>
                         <select class="form-control" ng-model="selectedBlock" ng-options="block.displayData for block in blocks"></select>
                       </td>
-
                       <td>
                         <input type="number" min="0" ng-model="unitPrice" step="0.01" class="form-control" placeholder="ex. 12.99"></input>
                       </td>
-
                       <td>
                         <select ng-model="units" class="form-control">
                           <option value="lbs">lbs</option>
@@ -226,11 +203,9 @@
                           <option value="kg">kg</option>
                         </select>
                       </td>
-
                       <td>
                         <input type="number" min="0" ng-model="quantity" value="1" class="form-control" placeholder="ex. 10"></input>
                       </td>
-
                       <td>
                         <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-dashboard-green"><i class="fa fa-plus"></i></btn>
                       </td>
@@ -242,11 +217,9 @@
             </div>
           </div>
         </div>
-
       </form>
     </div>
   </div>
-
   <div class="modal-footer">
     <div class="alignright">
       <button type="submit" ng-disabled="items.length==0" class="btn-dashboard-green" ng-click="ok()">Submit</button>
@@ -255,6 +228,7 @@
   </div>
 </script>
 
+<!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteOrderModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Delete Product</h3>
