Dashboard BEM methodology

--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -23,7 +23,7 @@
                       <td>{{supplyChain.dateCreated | date: 'short'}}</td>
                       <td>
                         <div class="alignright">
-                          <button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button>
+                          <button ng-click="setSupplyChain(supplyChain)" class="btn-status-default">View/Edit</button>
                         </div>
                       </td>
                     </tr>
