--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -27,7 +27,7 @@
                         <td>Subscription Pickup</td>
                         <td>
                           <div class="alignright">
-                            <button ng-click="viewOrderDetail(order)" class="btn-dashboard">View Details</button>
+                            <button ng-click="viewOrderDetail(order)" class="btn-status-default">View Details</button>
                           </div>
                         </td>
                       </tr>
@@ -53,7 +53,7 @@
                         <td>Subscription Pickup</td>
                         <td>
                           <div class="alignright">
-                            <button ng-click="viewOrderDetail(order)" class="btn-dashboard">View Details</button>
+                            <button ng-click="viewOrderDetail(order)" class="btn-status-default">View Details</button>
                           </div>
                         </td>
                       </tr>
