--- a/src/views/dashboard.default.supply-chain.create.html
+++ b/src/views/dashboard.default.supply-chain.create.html
@@ -15,7 +15,7 @@
                     <small class="text-muted">Maximum 30 characters.</small>
                   </div>
                 </fieldset>
-                <button type="submit" class="btn-dashboard">Submit</button>
+                <button type="submit" class="btn-status-success">Submit</button>
                 <br>
               </form>
             </div>
