--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -1,7 +1,6 @@
 <div class="col-lg-12">
   <h2 class="page-header light-text text-center"></h2>
   <div class="row placeholders">
-    <div class="col-lg-8">
       <div class="container">
         <div class="panel-container">
           <div class="panel panel-default">
@@ -9,11 +8,11 @@
               <div class="panel-heading">
                 <h1>Coastline Quick Start Guide</h1>
                 <br>
-                <a class="btn-dashboard-green" href="../img/coastline-guide.pdf">PDF Version</a>
+                <!--<iframe src="../img/coastline-guide.pdf" class="btn-status-success">PDF Version</iframe>-->
                 </h1>
                 <hr class="short">
               </div>
-              
+
               <div class="row">
                 <div class="col-lg-6" align="left">
                   <h3>Creating a Supply Chain</h3>
@@ -117,6 +116,5 @@
           </div>
         </div>
       </div>
-    </div>
   </div>
 </div>
