--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -6,7 +6,7 @@
         <div class="panel-container">
           <div class="panel panel-default">
             <div ng-controller="InventoryCtrl" class="panel-body">
-              <button ng-click="viewBlocks()" class="btn-dashboard">View/Edit Inventory</button>
+              <button ng-click="viewBlocks()" class="btn-status-default">View/Edit Inventory</button>
             </div>
           </div>
           <div ng-controller="SupplyChainDisplayCtrl" class="panel panel-default">
@@ -26,12 +26,12 @@
     <h3 class="modal-title">Inventory in {{stageName}}</h3>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="moveBlock()">Move</button>
-    <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="moveBlockToSales()">Move to Sales</button>
-    <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="viewDetails()">Batch Detail</button>
-    <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="editBlock()">Edit</button>
-    <button class="btn-dashboard-green" type="button" ng-click="addBlock()">Add</button>
-    <button class="btn-dashboard-red" type="button" ng-disabled="blocks.length==0" ng-click="deleteBlock()">Delete</button>
+    <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="moveBlock()">Move</button>
+    <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="moveBlockToSales()">Move to Sales</button>
+    <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="viewDetails()">Batch Detail</button>
+    <button class="btn-status-default" type="button" ng-disabled="blocks.length==0" ng-click="editBlock()">Edit</button>
+    <button class="btn-status-success" type="button" ng-click="addBlock()">Add</button>
+    <button class="btn-status-danger" type="button" ng-disabled="blocks.length==0" ng-click="deleteBlock()">Delete</button>
   </div>
   <div class="modal-body">
     <div class="panel panel-default">
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard" type="button" ng-click="ok()">Dismiss</button>
+    <button class="btn-status-default" type="button" ng-click="ok()">Dismiss</button>
   </div>
 </script>
 
@@ -132,8 +132,8 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
-    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-status-success" type="button" ng-click="ok()">OK</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -160,8 +160,8 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="ok()">Save</button>
-    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-status-success" type="button" ng-click="ok()">Save</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -175,8 +175,8 @@
     <p>Are you sure you want to delete this seafood batch?</p>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="ok()">Yes</button>
-    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -208,8 +208,8 @@
     </form>
     </div>
     <div class="modal-footer">
-      <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
-      <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+      <button class="btn-status-success" type="button" ng-click="ok()">OK</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
     </fieldset>
     </form>
@@ -234,8 +234,8 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
-    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-status-success" type="button" ng-click="ok()">OK</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
@@ -302,7 +302,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard" type="button" ng-click="cancel()">Close</button>
+    <button class="btn-status-default" type="button" ng-click="cancel()">Close</button>
   </div>
   </div>
 </script>
