--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -7,9 +7,9 @@
           <div class="panel-container">
             <div class="panel panel-default">
               <div class="panel-body alignleft">
-                <button ng-click="addOrder()" class="btn-dashboard-green">Add Invoice</button>
-                <button ng-click="viewOrderDetail(selectedOrder)" class="btn-dashboard">View Order Details</button>
-                <button ng-click="deleteOrder()" class="btn-dashboard-red">Delete Order</button>
+                <button ng-click="addOrder()" class="btn-status-success">Add Invoice</button>
+                <button ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default">View Order Details</button>
+                <button ng-click="deleteOrder()" class="btn-status-danger">Delete Order</button>
                 <input type="text" name="search" placeholder="Search for an item" class="search">
               </div>
             </div>
@@ -98,7 +98,7 @@
   </div>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="dismiss()">OK</button>
+    <button class="btn-status-success" type="button" ng-click="dismiss()">OK</button>
   </div>
 </script>
 
@@ -207,12 +207,11 @@
                         <input type="number" min="0" ng-model="quantity" value="1" class="form-control" placeholder="ex. 10"></input>
                       </td>
                       <td>
-                        <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-dashboard-green"><i class="fa fa-plus"></i></btn>
+                        <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-status-success"><i class="fa fa-plus"></i></btn>
                       </td>
                     </tr>
                   </tbody>
                 </table>
-                <h3 class="text-right">Total: ${{order}}</h3>
               </div>
             </div>
           </div>
@@ -222,8 +221,8 @@
   </div>
   <div class="modal-footer">
     <div class="alignright">
-      <button type="submit" ng-disabled="items.length==0" class="btn-dashboard-green" ng-click="ok()">Submit</button>
-      <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+      <button type="submit" ng-disabled="items.length==0" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
   </div>
 </script>
@@ -237,7 +236,7 @@
     <p>Are you sure you want to delete this order? Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="ok()">Yes</button>
-    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
