--- a/src/views/dashboard.default.sales-management.menu.html
+++ b/src/views/dashboard.default.sales-management.menu.html
@@ -21,7 +21,7 @@
                                                 <td>{{$index + 1}}</td>
                                                 <td>{{supplyChain.name}}</td>
                                                 <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
-                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button></td>
+                                                <td><button ng-click="setSupplyChain(supplyChain)" class="btn-status-default">View/Edit</button></td>
                                             </tr>
                                         </tbody>
                                     </table>
