--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -15,7 +15,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="table-responsive">
-                  <table class="table table-striped">
+                  <table class="table tableWhite">
                     <thead>
                       <tr>
                         <th>#</th>
